# SecureCLI-Tuner

./: .env.example  .gitignore  LICENSE  README.md  RT_SUBMISSION_SNAPSHOT.md  main.py  pyproject.toml  requirements.txt
.agent/workflows/: discover-standards.md  security_regression.md
.claude/commands/: .gitkeep
agent-os/: config.yaml
agent-os/standards/: index.yml
cli_tuner/: __init__.py  generator.py  model_config.py  router.py
cli_tuner/prompts/: bash_system.txt  git_system.txt  router_system.txt
commandrisk/: __init__.py  engine.py  loader.py  types.py  wrapper.py
commandrisk/guardrails/: __init__.py  (+3 more)
compliance/: __init__.py  aibom_generator.py
configs/: evaluation_config.yaml
data_pipeline/: .gitkeep  __init__.py  preprocess_data.py
deployment/: .gitkeep
docs/: ARCHITECTURE.md  DATA_PROVENANCE.md  DEPLOYMENT.md  EVALUATION_DEEP_DIVE.md  EVALUATION_REPORT.md  MODEL_CARD.md  OWASP_COMPLIANCE.md  RT_PUBLICATION_DRAFT.md  RUNPOD_RECOVERY_GUIDE.md  SECURITY.md  TRAINING_RUN_V2.md  architecture.png.placeholder
evaluation/: .gitkeep  __init__.py  mmlu_results.json  semantic_evaluator.py
monitoring/: .gitkeep
reproducibility/: .gitkeep
schemas/: .gitkeep  __init__.py  dataset.py  evaluation.py  request.py
scripts/: RT_EVALUATION_RUNPOD.md  RUNPOD_QUICKSTART.md  __init__.py  compare_baseline.py  demo_v1_security_gap.py  download_datasets.py  download_semantic_model.py  evaluate_baseline.py  evaluate_mmlu.py  evaluate_semantic.py  prepare_training_data.py  setup_runpod.sh
tests/: __init__.py
training/: .gitkeep  axolotl_config.yaml
(+28 files in other folders)
